--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>new code change</h3>
     <p>more paragraph</p>
     <p>i am coding coding and coding</p>
+    <img src="index.png" alt="">
 </body>
 </html>
