--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>more paragraph</p>
     <p>i am coding coding and coding</p>
     <img src="index.png" alt="">
+    <img src="index.jpeg" alt="">
 </body>
 </html>
